@@ -1,6 +1,7 @@
 Revision history for File::DataClass
 
 0.11.
+         - Fixed bug in F::DC::HashMerge. Will update undef to 0
          - Made EXTENSIONS available in F::DC::Schema
          - Replace F::DC::Util with F::DC::Functions
          - Made JSON untaint the data it reads
